--- a/proj.ios/Info.plist
+++ b/proj.ios/Info.plist
@@ -40,6 +40,8 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
